--- a/social_app/package.json
+++ b/social_app/package.json
@@ -10,23 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.67.3",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.1",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
     "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
-    "react-native-image-crop-picker": "^0.37.2",
-    "react-native-vector-icons": "^8.1.0",
+    "react": "17.0.2",
+    "react-native": "0.67.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.37.2",
     "react-native-reanimated": "^1.13.3",
     "react-native-safe-area-context": "^3.3.0",
-    "react-native-screens": "^3.6.0"
+    "react-native-screens": "^3.6.0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
